--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="msg-container hide">
+        <p id="msg">Winner</p>
+        <button id="newGame">New Game</button>
+    </div>
     <h1>TIC TAC TOE</h1>
     <div class="container">
          <div class="game">
